WIP: 不具合調査中

--- a/docs_dev/リバーシ_ログ/リバーシ_ログ.md
+++ b/docs_dev/リバーシ_ログ/リバーシ_ログ.md
@@ -354,7 +354,7 @@
 
 .  .  .  .  .  .  .  . 
 
-.  .  .  .  .  .  .  .  🌟 FIXME: C6 に x があるはず？
+.  .  .  .  .  .  .  .  🌟 FIXME: C6 に x があるはず？ ［２階の指し手生成］でおかしい？
 
 .  .  .  .  .  .  .  . 
 
